<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.edu.eafit.yomas10.PerfilActivity"
    android:columnCount="3"
    android:rowCount="12">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/usrPic"
        android:src="@drawable/no_user_logo"
        android:layout_gravity="center_horizontal"
        android:clickable="false"
        android:layout_rowSpan="7"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_margin="10dp"
        android:contentDescription="@string/infoImagen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/name"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:layout_row="0"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/username"
        android:layout_row="2"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/posicion"
        android:layout_row="4"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about"
        android:id="@+id/aboutTV"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_marginStart="10dp"
        android:textColor="#010101"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/userBio"
        android:layout_row="8"
        android:layout_column="0"
        android:layout_marginStart="10dp"
        android:layout_columnSpan="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email"
        android:id="@+id/emailTV"
        android:layout_row="10"
        android:layout_column="0"
        android:layout_marginStart="10dp"
        android:layout_columnSpan="2"
        android:textColor="#010101"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/email"
        android:layout_row="11"
        android:layout_column="0"
        android:layout_marginStart="10dp"
        android:layout_columnSpan="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/usernameTV"
        android:layout_row="1"
        android:layout_column="2"
        android:text="@string/username"
        android:textColor="#010101" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/posTV"
        android:layout_row="3"
        android:layout_column="2"
        android:text="@string/posicion"
        android:textColor="#010101"
        android:layout_marginTop="5dp" />

</GridLayout>
